minor style readability issue

--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.ng.scss
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.ng.scss
@@ -36,7 +36,7 @@
       font-size: 30;
       margin: 0;
       @include m-theme() {
-        color: themed($m-textColor--primary);
+        color: themed($m-white-always);
       }
       @media screen and (max-width: $min-tablet) {
         padding-left: 30px;
